kotlin/programming-kotlin_code/inheritance/output/buildcarderror.output
Derived.kt:1:31: error: cannot access '<init>': it is private in 'Card'
class Derived(suit: String) : Card(suit)
                              ^
